Fixed fat scroll / remove footer
Fixed bottom scrollbar to NOT be fat (same height as width of side scrollbar)

removed footer as its pointless

--- a/public/css/base_template.css
+++ b/public/css/base_template.css
@@ -10,9 +10,9 @@ html,
 body{
     background-color: var(--cust-grey);
     color: var(--cust-white);
-    height: 100%;
+    height: calc(100% - 5rem);
     width: 100%;
-    overflow:auto;
+    overflow: auto;
 }
 
 /* 
